@@ -1,6 +1,16 @@
 CHANGELOG
 =========
 
+DarkElements version 4.1 - may 2016
+- theme now supports post formats
+- file header: updated head section
+- added file content-list 
+- files archive, index and search: relocated part of loop to separate file
+- file index en css: changed featured post notice
+- file single: changed .page-title-post into .post-title-single
+- changed .sticky into .sticky-title
+- several small adjustments
+
 DarkElements version 4.0 - april 2016
 - resized all headings (thanks Tom)
 - changed address tag display
